Fixed overflow in mobile, switched to hammer.js

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -7,7 +7,7 @@ $c-dark: #B87126;
 $c-light: #F7C490;
 $shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
-body {
+html {
         overflow-x: hidden;
 }
 
